@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Feb 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
+  multibuild openblas when USE=int64 is specified.
+
   06 Jan 2014; Justin Lecher <jlec@gentoo.org> openblas-9999.ebuild,
   metadata.xml:
   Switch from git-2 to git-r3
